# tower-defense-backend

./: Cargo.toml  README.md
tower-defense/: Cargo.toml
tower-defense-server/: Cargo.toml
tower-defense-server/resources/www/enemies/: blue_dying.json
tower-defense-server/resources/www/structures/blitz_turm/: blitz_turm_v1.json  blitz_turm_v1_attack.json  blitz_turm_v2.json  blitz_turm_v2_.json  blitz_turm_v2_idle.json
tower-defense-server/resources/www/structures/konfetti_kanone/: Konfetti_Kanone_v1_attack.json  konfetti_kanone_v1_idle.json  konfetti_kanone_v2_attack.json  konfetti_kanone_v2_idle.json
tower-defense-server/resources/www/structures/single/: single_shot_v1_attack.json  single_shot_v1_idle.json  single_shot_v1_projectile.json
tower-defense-server/src/: handler.rs  main.rs  server.rs
tower-defense-server/src/game/: client.rs  game_lobby.rs  game_server.rs  mod.rs  players.rs  server_message.rs
tower-defense/src/: game.rs  lib.rs  map.rs  path.rs
tower-defense/src/core/: map.rs  mod.rs
tower-defense/src/entity/: gif.rs  mod.rs
tower-defense/src/entity/enemy/: enemy.rs  enemy_data.rs  enemy_type.rs  mod.rs
tower-defense/src/entity/enemy/instance/: blue.rs  mod.rs  purple.rs  (+2 more)
tower-defense/src/entity/structure/: mod.rs  structure.rs  structure_type.rs
tower-defense/src/levels/: level_1.rs  mod.rs
tower-defense/src/map/: map.rs  mod.rs  wave.rs
tower-defense/src/map/levels/: level_1.rs  mod.rs
tower-defense/src/map/path/: path.rs
tower-defense/src/math/: mod.rs  rect.rs  vector2.rs
tower-defense/src/path/: mod.rs  path.rs
(+40 files in other folders)
