[package]
name = "tower-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
lazy_static = "1.4.0"
